update before publishing

--- a/FL2023-Assignment1-orosalesalfaroalfaro/FL2023-Assignment1-orosalesalfaroalfaro.csproj
+++ b/FL2023-Assignment1-orosalesalfaroalfaro/FL2023-Assignment1-orosalesalfaroalfaro.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>FL2023_Assignment1_orosalesalfaroalfaro</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
